GNOME Bugzilla – Bug 720819
header: vertically centralize the "Not playing" label
Last modified: 2014-03-16 04:50:28 UTC
This is just an "improvement" on the UI when there's no song being played. Our designers think this is better than current label. Feel free to reject if you do not share their minds :)
Created attachment 264614 [details] [review] proposed patch
pushed (with some small changes) as commit ca03828, thanks