header: vertically centralize the "Not playing" label

https://bugzilla.gnome.org/show_bug.cgi?id=720819